<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/imLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/bienvenida"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/blanco"
        android:textSize="35sp"
        android:paddingTop="75dp"
        android:paddingStart="35dp"/>

    <TextView
        android:id="@+id/tvFrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:paddingTop="20dp"
        android:text="@string/fraseentrada"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imLogo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_login"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:singleLine="false"
        android:textColor="@color/navy"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrase" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_login"
        android:drawableStart="@drawable/ic_contrasena"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/navy"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/boton_redondeado"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/IniciarSesion"
        android:textAllCaps="false"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />

    <TextView
        android:id="@+id/tvolvido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/olvido"
        android:textAlignment="textEnd"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btInicioSesion" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvolvido">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/InicioSesionCon"
            android:textSize="11sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/navy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toStartOf="@id/tvText"
            android:background="@color/gris_oscuro" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/tvText"
            android:background="@color/gris_oscuro" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyRegistros"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btGoogle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_google"
            android:drawableStart="@drawable/ic_google"
            android:text="@string/Google"
            android:textAllCaps="false"
            android:textColor="@color/gris"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/tvNoCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/nocuenta"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tvRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/registro"
            android:textAlignment="center"
            android:textSize="12sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>