<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout"
    style="@style/Theme.Runnica2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.MainActivity">


        <TextView
            android:id="@+id/tvTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/tvTiempo"
            android:textAlignment="textStart"
            android:textColor="@color/azul"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvtextoTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-18dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tvtextoTiempo"
            android:textColor="@color/navy"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tvDistancia"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDistanciaTexto"
            app:layout_constraintStart_toStartOf="@+id/tvDistanciaTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvDistanciaTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tvDistanciaTexto"
            android:textColor="@color/navy"
            android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@+id/tvVelocidadTexto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDistancia" />

        <TextView
            android:id="@+id/tvVelocidad"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tvVelocidad"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tvVelocidadTexto"
            app:layout_constraintStart_toStartOf="@+id/tvVelocidadTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvVelocidadTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tvVelocidadTexto"
            android:textColor="@color/navy"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDistancia" />

        <TextView
            android:id="@+id/tvRitmo"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tvRitmo"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tvRitmoTexto"
            app:layout_constraintStart_toStartOf="@+id/tvRitmoTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvRitmoTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tvRitmoTexto"
            android:textColor="@color/navy"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvVelocidadTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvDistancia" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVelocidadTexto">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/Googlemap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:context=".MapsActivity"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/btn_radio"
            tools:ignore="SpeakableTextPresentCheck" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPausa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
            app:layout_constraintStart_toEndOf="@+id/fabStop"
            app:srcCompat="@drawable/common_full_open_on_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_layout"
        app:menu="@menu/activity_main_drawer"/>


</androidx.drawerlayout.widget.DrawerLayout>




