<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FinalActividadActivity"
    android:background="@color/blanco"
    style="@style/Theme.Runnica2.NoActionBar"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iviconoActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_run"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="25dp"
            android:layout_marginTop="65dp"
            />

        <TextView
            android:id="@+id/tvdiaRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/DiaRegistroActividad"
            android:textColor="@color/navy"
            android:textSize="15sp"
            android:paddingStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/iviconoActividad"
            app:layout_constraintTop_toTopOf="@id/iviconoActividad"/>

        <TextView
            android:id="@+id/tvfechaRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:textSize="13sp"
            android:text="@string/FechaRegistroActividad"
            app:layout_constraintStart_toStartOf="@id/tvdiaRegistro"
            app:layout_constraintTop_toBottomOf="@id/tvdiaRegistro"
            android:paddingStart="15dp"/>

        <View
            android:id="@+id/separador1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/iviconoActividad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/azul_oscuro_transparente"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvTiempoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separador1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Tiempo"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@color/navy"/>

        <TextView
            android:id="@+id/tvTiempoFA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="00:00:00"
            android:textAlignment="center"
            android:textColor="@color/navy"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTiempoText" />

        <View
            android:id="@+id/separador2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/tvTiempoFA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/azul_oscuro_transparente"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvDistanciaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separador2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Distancia"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@color/navy"/>

        <TextView
            android:id="@+id/tvDistanciaFA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDistanciaText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="3,00"
            android:textSize="22sp"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:textColor="@color/navy"/>

        <View
            android:id="@+id/separador3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/tvDistanciaFA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/azul_oscuro_transparente"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvRitmoTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separador3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/ritmoTexto"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@color/navy"/>

        <TextView
            android:id="@+id/tvRitmoFA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvRitmoTexto"
            app:layout_constraintStart_toStartOf="parent"
            android:text="5.50"
            android:textSize="22sp"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:textColor="@color/navy"/>

        <View
            android:id="@+id/separador4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/tvRitmoFA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/azul_oscuro_transparente"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/boton_no_redondeado"
            android:text="@string/Guardar"
            android:textColor="@color/gris"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_light"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/appbarFinalActividad"
        layout="@layout/app_bar_actividad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Theme.Runnica2.NoActionBar"/>

</androidx.drawerlayout.widget.DrawerLayout>

